Removed handlers and added help command

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "prefix": "!",
-    "token": "Token goes here"
+    "highlight": "BLUE",
+    "token": "NzUwNDcxNDQwNDA2NTQ0Mzg0.X07A_g.axmVPgFNXG_6TuR4EF3eGiKSDGA"
 }
