--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ant-Swear Bot, is a Discord bot, Made to prevent swearing/toxicity. And to make a better community for everyone, That uses this bot for their server. Anti-Swear Bot was made with Typescript, As it is the language i am working with currently. Hope this bot gives you the results it was made for.",
   "main": "app.ts",
   "scripts": {
-    "start": "tsc app.ts"
+    "start": "npx ts-node app.ts"
   },
   "repository": {
     "type": "git",
