Added ping command

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "prefix": "!",
     "highlight": "BLUE",
-    "token": "NzUwNDcxNDQwNDA2NTQ0Mzg0.X07A_g.axmVPgFNXG_6TuR4EF3eGiKSDGA"
+    "footer": "Created by https://github.com/slayerinc",
+    "token": "Your token"
 }
