--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "prefix": "!",
     "highlight": "BLUE",
     "footer": "Created by https://github.com/slayerinc",
-    "token": ""
+    "token": "Your token"
 }
