--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "prefix": "!",
+    "prefix": "un!",
     "highlight": "BLUE",
-    "footer": "Created by https://github.com/slayerinc",
+    "footer": "UN-Bot",
     "token": "Your token"
 }
