--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "prefix": "un!",
     "highlight": "BLUE",
     "footer": "UN-Bot",
-    "token": "Your token"
+    "token": "OTc3NTU0NTk1NDQ0MzAxODY0.GLpbdj.qBTFsny2EH4mcPOCOVdfas67J7KE2UBOET9fKg"
 }
